<?xml version="1.0"?>
<package>
  <name>sick_s3x</name>
  <version>0.0.2</version>
  <description>The sick_s3x package - origin from the university of Bonn. Don't recall why we have our own version</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
